# aeruginous-tbr

./: .clippy.toml  .rustfmt.toml  Cargo.toml  README.md  no_such.txt
.github/workflows/: cff.yml  ci.yml  comment-changes.yml  mirror.yml  pr.yml  rustfmt.yml
changelog.d/: 20240215_192423_GitHub_Actions_rust-setup.ron  20240218_151329_GitHub_Actions_6.ron  20240218_211135_GitHub_Actions_7.ron  20240218_211846_GitHub_Actions_16.ron  20240218_213702_GitHub_Actions_10.ron  20240219_185150_GitHub_Actions_add-glob-crate.ron  20240220_202525_GitHub_Actions_upload-mutation-testing-results-as-assets.ron  20240220_235219_GitHub_Actions_tar-handling-cli.ron  20240224_005202_GitHub_Actions_33.ron  20240225_142910_GitHub_Actions_39.ron  20240228_195817_GitHub_Actions_50.ron  20240229_231248_GitHub_Actions_56.ron  20240301_190448_GitHub_Actions_61.ron
src/: application.rs  archive.rs  lib.rs  main.rs
tests/: application.rs  archive.rs  tar_archive.rs
